This will fix the issue if opencollective_banner isnt visible

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -809,7 +809,8 @@ div.section.info {
 	bottom: 0;
 	width: 54%;
 	position: absolute;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 	text-align: center;
 	vertical-align: middle;
 	color: white;
